--- a/OneDrive/Desktop/flexboxbasics/index.css
+++ b/OneDrive/Desktop/flexboxbasics/index.css
@@ -73,3 +73,11 @@ body {
   color: hsl(225, 22%, 96%);
   margin-bottom: 0.5rem;
 }
+
+.para {
+  font-size: 0.95rem;
+  line-height: 1.4;
+  color:whitesmoke;
+
+ 
+}
